Fix types, make right alignment of overflow builtin.

--- a/extensions/amp-clamp-text/0.1/amp-clamp-text.css
+++ b/extensions/amp-clamp-text/0.1/amp-clamp-text.css
@@ -4,3 +4,8 @@ amp-clamp-text {
   padding: 0 !important;
   border: none !important;
 }
+
+amp-clamp-text[overflow-style="right"] .amp-clamp-overflow {
+  float: right;
+  height: 100%;
+}
